Fix hyperref and underfull hbox warnings

--- a/cubicfourfold.tex
+++ b/cubicfourfold.tex
@@ -197,7 +197,8 @@ fitting into a diagram:
 
 In the next section, we will see how the above correspondence allows us to define a Fourier-Mukai transform $\Phi_{\calI(1)}: \calD (\tscrF)\rightarrow \calD (X)$ which sends a twisted subcategory $\calD(S,\alpha)$ isomorphically to the Kuznetsov component.
 
-\subsubsection{Twisted sheaves on the K3 surface $S$}
+% \texorpdfstring to not break hyperref's generated bookmarks
+\subsubsection{Twisted sheaves on the K3 surface \texorpdfstring{$S$}{S}}
 
 We have seen that to every cubic fourfold containing a plane, we can associate some K3 surface by blowing up the plane and realizing $S$ as the variety of rulings on the fibers of the quadric fibration $\tilde{X}\rightarrow \P^2$. Given that the Kuznetsov component looks like the derived category of a K3 surface, it is natural to conjecture that these two are related. In this section, we review two approaches to proving the following: 
 \begin{proposition}{Kuznetsov}{Kuznetsov twisted K3}
@@ -329,8 +330,9 @@ Now we are ready to prove the main theorem:
 \end{proof}
 
 \begin{corollary}{Kuznetsov}{}
-    If $2d>n+1$, then $\calA_X$ is a fractional Calabi-Yau category whose Serre functor obeys $\calS_{\calA_X}^{d/c}=[(n+2)(d-2)/c]$, where $c=\gcd(d,n+2)$.\newline
+    If $2d>n+1$, then $\calA_X$ is a fractional Calabi-Yau category whose Serre functor obeys $\calS_{\calA_X}^{d/c}=[(n+2)(d-2)/c]$, where $c=\gcd(d,n+2)$.
 
+    ~
 
     In the special case that $X$ is a cubic fourfold, $n=4,d=3$ hence $\calS=T^{-3}\circ [4]=[2]$. More generally, whenever $d|n+2$, the component is Calabi-Yau.
 \end{corollary}
