Add bits on MF vs. D_Sg and Knorrer periodicity

--- a/commands.tex
+++ b/commands.tex
@@ -120,6 +120,7 @@
 \newcommand{\calI}{\mathcal{I}}
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calT}{\mathcal{T}}
+\newcommand{\calR}{\mathcal{R}}
 \newcommand{\bfF}{\mathbf{F}}
 \newcommand{\bfL}{\mathbf{L}}
 \newcommand{\tbfF}{\widetilde{\mathbf{F}}}
